test/compilable/imports/imp4range.d
public import imports.imp4array;