test/fail_compilation/imports/test313b.d
module imports.test313b;

public import imports.test313a;
import imports.test313priv;
